# dns_tools

./: CHANGELOG.md  LICENSE  README.md  README.rst  do-install  pyproject.toml
Docs/: Changelog.pkg  Changelog.rst  conf.py  index.rst
Docs/License/: License.rst
Docs/Misc/: Contributing.rst
conf.d/: config.sample
cron/: dnssec-roll.cron
packaging/: PKGBUILD  requirements.txt
scripts/: check-source  do-install  gen-hmac.sh  resign.sh  zsk-roll-1.sh  zsk-roll-2.sh
src/dns_tools/: __about__.py  __init__.py  _version.py  dns-prod-push.py  dns-serial-bump.py  dns-tool.py
src/dns_tools/apps/: dns-prod-push.py  dns-serial-bump.py  dns-tool.py
src/dns_tools/config/: __init__.py  _config.py  _config_checks.py  _config_read.py  _config_utils.py  _dnsserv.py  _keyopts.py  _normalize_paths.py  _parse_args.py  _prodopts_avail.py  _prodopts_base.py  _toolopts_avail.py  _toolopts_base.py  prodopts.py  toolopts.py
src/dns_tools/keys/: __init__.py  _generate_key.py  _key.py  _keyfile_extensions.py  _keyid_from_filename.py  _keyinfo.py  _keyinfo_base.py  keys.py
src/dns_tools/lib/: __init__.py  class_dnsserv.py  class_dnstool.py  class_key.py  class_lock.py  class_opts.py  class_print.py  class_prod.py  color_pick.py  compare.py  config.py  dns_keys.py  dns_serial.py  dns_server_restart.py  key_tools.py  options.py  process_keys.py  process_signing.py  prod.py  roll_keys.py  run_prog.py  serial_bump.py  sign.py  toml.py  tools.py  zone.py  zone_perms.py
src/dns_tools/lockmgr/: __init__.py  class_lock.py
src/dns_tools/production/: __init__.py  _dns_server_restart.py  _prod_base.py  _to_prod.py  prod.py
src/dns_tools/pynotify/: __init__.py  class_inotify.py  class_mask.py  events.py
src/dns_tools/pynotify/c-code/: Makefile  sizes  sizes.c
src/dns_tools/tool/: __init__.py  bump_serial_sign.py  dnstool.py  dnstool_base.py  key_tools.py  process_keys.py  process_signing.py  sign.py
src/dns_tools/utils/: __init__.py  class_lock.py  class_print.py  color_pick.py  file_tools.py  misc_tools.py  run_prog.py  run_prog_copy.py  run_prog_local.py  toml.py  version.py
src/dns_tools/zone/: __init__.py  dns_serial.py  zone.py  zone_perms.py
tests/: new_env.py  run_prog.py  run_prog_local.py  test_serial.py  test_tool.py
tests/tools/: config  fake_dns_restart.sh  make-keys  serial-check-1.zone  serial-check-2.zone  serial-check-3.zone  test-clean  test-init
tests/tools/zones/include-tlsa/: tlsa.example.com
