[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dns_tools"
dynamic = ["version"]
description = "DNS server tools for DNSSEC etc"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/dns_tools"]
include = [
    "src/dns_tools",
]

[project.urls]
Documentation = "https://github.com/gene-git/dns_tools/Docs"
Issues = "https://github.com/gene-git/dns_tools/issues"
Source = "https://github.com/gene-git/dns_tools"

[tool.hatch.version]
path = "src/dns_tools/_version.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.13", "3.14"]

[tool.mypy]
check_untyped_defs = true
